Bug 1819726 - Handle bidi for rb and rt boxes. r=emilio

Patch proposed by Xidorn appears to work as expected. Added testcase to WPT.

Differential Revision: https://phabricator.services.mozilla.com/D171445